--- a/style.css
+++ b/style.css
@@ -10,3 +10,15 @@
    color: white;
 
 }
+
+.nav-logo{
+    height: 50px;
+    width: 100px;
+}
+
+.logo{
+    background-color: url("amazon_logo.png");
+    background-size: cover;
+    height: 50px;
+    width: 100%;
+}
