--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .logo{
-    background-color: url("amazon_logo.png");
+    background-image: url("amazon_logo.png");
     background-size: cover;
     height: 50px;
     width: 100%;
