--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@
    height: 60px;
    background-color: #0f1111;
    color: white;
+   display: flex;
 
 }
 
 .nav-logo{
     height: 50px;
     width: 100px;
+
 }
 
 .logo{
@@ -21,4 +23,29 @@
     background-size: cover;
     height: 50px;
     width: 100%;
+}
+
+.border{
+  border: 2px solid transparent;
+}
+
+.border:hover {
+    border: 2px solid white;
+}
+
+/** box2 **/
+.add-first{
+    color: #cccccc;
+    font-size: 0.7rem;
+    margin-left: 15px;
+}
+
+.add-second{
+    font-size: 1rem;
+    margin-left: 3px;
+}
+
+.add-icon{
+    display: flex;
+    align-items: center;
 }
