--- a/style.css
+++ b/style.css
@@ -72,4 +72,13 @@
 .search-input{
     width: 100%;
     font-size: 1rem;
+    border: none;
+}
+
+.search-icon{
+    width: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
 }
