--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
    color: white;
    display: flex;
    align-items: center;
+   justify-content: space-evenly;
 }
 
 .nav-logo{
@@ -64,6 +65,7 @@
     background-color: #f3f3f3;
     width: 50px;
     text-align: center;
+    font-size: 0.7rem;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border: none;
@@ -81,4 +83,8 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
+    background-color: orange;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    color: #0f1111;
 }
