--- a/style.css
+++ b/style.css
@@ -88,3 +88,14 @@
     border-bottom-right-radius: 4px;
     color: #0f1111;
 }
+
+
+/** box4 **/
+span{
+    font-size: 0.7rem;
+}
+
+.nav-second{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
