--- a/style.css
+++ b/style.css
@@ -91,11 +91,26 @@
 
 
 /** box4 **/
+.nav-search:hover {
+    border: 2px solid orange;
+}
+
+
 span{
     font-size: 0.7rem;
 }
 
 .nav-second{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+/** box6 **/
+.nav-cart i {
+ font-size: 30px;
+
+}
+.nav-cart{
     font-size: 0.85rem;
     font-weight: 700;
 }
