--- a/style.css
+++ b/style.css
@@ -114,3 +114,35 @@ span{
     font-size: 0.85rem;
     font-weight: 700;
 }
+
+/**panel**/
+
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.panel-ops :hover {
+    border: 2px solid white;
+}
+.panel-ops p{
+    display: inline;
+    margin-left: 10px;
+}
+.panel-ops{
+    width: 70%;
+    font-size: 0.85rem;
+}
+
+.panel-deals :hover{
+    border: 2px solid white;
+}
+.panel-deals{
+    font-size: 0.9rem;
+    font-weight: 700;
+}
